--- a/My_First_Project/templates/first_app/index.html
+++ b/My_First_Project/templates/first_app/index.html
@@ -1,4 +1,5 @@
 <<!DOCTYPE html>
+{%load static%}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -10,6 +11,7 @@
     <h1>i am being from view.py of first app  </h1>
 
     {{ text_1}}
+    <img src="{% static "image/sunflower.jpg" %}">
 
 
 
