--- a/My_First_Project/templates/first_app/index.html
+++ b/My_First_Project/templates/first_app/index.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="{% static "css/mystyle.css" %} ">
     <title></title>
   </head>
   <body>
@@ -11,6 +12,7 @@
     <h1>i am being from view.py of first app  </h1>
 
     {{ text_1}}
+    <br> <br>
     <img src="{% static "image/sunflower.jpg" %}">
 
 
