django form class created

--- a/My_First_Project/templates/first_app/form.html
+++ b/My_First_Project/templates/first_app/form.html
@@ -21,6 +21,15 @@
 
       <input type="submit" name="" value="submit">
 
+      <hr>
+
+      <h3>{{heading_1}}</h3>
+
+      <form class="" action="" method="post">
+        {{text_form}}
+
+      </form>
+
 
     </form>
 
