--- a/My_First_Project/templates/first_app/form.html
+++ b/My_First_Project/templates/first_app/form.html
@@ -22,8 +22,8 @@
     {% if form_submitted %}
 
       <p>{{user_name}}</p>
-      <p>{{user_dob}}</p>
-      <p>{{user_email}}</p>
+      <!-- <p>{{user_dob}}</p>
+      <p>{{user_email}}</p> -->
 
     {% endif %}
 
