--- a/My_First_Project/templates/first_app/index.html
+++ b/My_First_Project/templates/first_app/index.html
@@ -9,6 +9,8 @@
   <body>
     <h1>{{text_1}}</h1>
 
+    <a href="/form/">add new</a>
+
     <table border="1">
       <tr>
         <th>First Name</th>
