--- a/My_First_Project/templates/first_app/form.html
+++ b/My_First_Project/templates/first_app/form.html
@@ -6,6 +6,8 @@
   </head>
   <body>
 
+    <a href="{% url 'First_app:index'%}">Back</a>
+
     <h3>{{heading_1}}</h3>
     <form  action="" method="POST">
 
