--- a/My_First_Project/templates/first_app/index.html
+++ b/My_First_Project/templates/first_app/index.html
@@ -1,31 +1,8 @@
 <!DOCTYPE html>
-{% load static %}
-<html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="{% static "css/mystyle.css" %}">
-    <meta charset="utf-8">
-    <title>Musician List</title>
-  </head>
-  <body>
-    <h1>{{text_1}}</h1>
+{% extends "first_app/base.html" %}
 
-    <a href="{% url 'First_app:form'%}">add new</a>
+{% block body_block%}
 
-    <table border="1">
-      <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Instrument</th>
+<h1>I am Index Page</h1>
 
-      </tr>
-      {% for row in musician %}
-      <tr>
-        <td>{{row.first_name}}</td>
-        <td>{{row.last_name}}</td>
-        <td>{{row.instrument}}</td>
-      </tr>
-      {% endfor%}
-    </table>
-
-  </body>
-</html>
+{% endblock %}
