--- a/My_First_Project/templates/first_app/base.html
+++ b/My_First_Project/templates/first_app/base.html
@@ -26,10 +26,13 @@
       </li>
     </ul>
   </nav>
-
+<div class="container">
   {% block body_block%}
 
   {% endblock %}
+
+</div>
+
 
   </body>
 </html>
