--- a/My_First_Project/templates/first_app/index.html
+++ b/My_First_Project/templates/first_app/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 {% extends "first_app/base.html" %}
 
+{% load my_filter %}
+
 {% block body_block%}
 
-<h1>I am Index Page</h1>
+<h1>{{simple_text|custom_filter}}</h1>
 
 {% endblock %}
