--- a/My_First_Project/templates/first_app/index.html
+++ b/My_First_Project/templates/first_app/index.html
@@ -5,6 +5,6 @@
 
 {% block body_block%}
 
-<h1>{{simple_text|custom_filter}}</h1>
+<h1>{{simple_text|custom_filter:" added from filters argument"}}</h1>
 
 {% endblock %}
