--- a/My_First_Project/templates/first_app/base.html
+++ b/My_First_Project/templates/first_app/base.html
@@ -12,20 +12,24 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <meta charset="utf-8">
-    <title></title>
+    <title>{{title}}</title>
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'First_app:index' %}">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'First_app:form' %}">Form</a>
-      </li>
-    </ul>
-  </nav>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'First_app:index' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'First_app:musician_form' %}">Add Musician </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'First_app:albam_form' %}">Add Albam </a>
+        </li>
+      </ul>
+    </nav>
+
 <div class="container">
   {% block body_block%}
 
