--- a/My_First_Project/templates/first_app/albam_form.html
+++ b/My_First_Project/templates/first_app/albam_form.html
@@ -3,6 +3,15 @@
 
 {% block body_block%}
 
-<h1>This is Albam form page</h1>
+<h1>This is Albam:</h1>
+
+<form  method="POST">
+
+  {{albam_form.as_p}}
+  {% csrf_token %}
+
+  <input type="submit" name="submit" value="Add" class="btn btn-primary btn-sm">
+
+</form>
 
 {% endblock %}
