--- a/My_First_Project/templates/first_app/musician_form.html
+++ b/My_First_Project/templates/first_app/musician_form.html
@@ -3,6 +3,15 @@
 
 {% block body_block%}
 
-<h1>This is Musician Page</h1>
+<h3>This is Musician Page:</h3>
+
+<form  method="POST">
+
+  {{musician_form.as_p}}
+  {% csrf_token %}
+
+  <input type="submit" name="submit" value="Add" class="btn btn-primary btn-sm">
+
+</form>
 
 {% endblock %}
