--- a/My_First_Project/templates/first_app/index.html
+++ b/My_First_Project/templates/first_app/index.html
@@ -8,7 +8,7 @@
 <ul>
   {% if musician_list %}
   {% for musician in musician_list %}
-     <li>{{musician.first_name}} {{musician.last_name}}</li>
+     <li> <a href="{% url 'First_app:albam_list' artist_id=musician.id %}"> {{musician.first_name}} {{musician.last_name}} </a> </li>
   {% endfor %}
 
   {% else %}
