--- a/My_First_Project/templates/first_app/edit_albam.html
+++ b/My_First_Project/templates/first_app/edit_albam.html
@@ -14,8 +14,10 @@
   {{edit_form.as_p}}
   {% csrf_token%}
 
-  <input type="submit" name="submit" value="update" class="btn btn-danger">
+  <input type="submit" name="submit" value="update" class="btn btn-success">
 
 </form>
+<br>
+<a href="{% url 'First_app:delete_albam' albam_id=albam_id %}" class="btn btn-danger" onclick="return confirm('Delete this Album? ')">Delete</a>
 
 {% endblock %}
