Delete Artist successfully

--- a/My_First_Project/templates/first_app/albam_list.html
+++ b/My_First_Project/templates/first_app/albam_list.html
@@ -24,4 +24,6 @@
   {% endfor%}
 </table>
 
+<a href="{% url 'First_app:delete_artist' artist_id=artist_info.id %}" class="btn btn-danger" onclick="return confirm('Delete this Musician? ')">Delete</a>
+
 {% endblock %}
