--- a/another_project/my_another_project/another_app/templates/another_app/base.html
+++ b/another_project/my_another_project/another_app/templates/another_app/base.html
@@ -21,6 +21,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'another_app:index' %}">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'another_app:add_musician' %}">Add Musician</a>
+        </li>
       </ul>
     </nav>
 
