--- a/another_project/my_another_project/another_app/templates/another_app/musician_details.html
+++ b/another_project/my_another_project/another_app/templates/another_app/musician_details.html
@@ -12,8 +12,11 @@
   {% for album in musician.album_list.all %}
   <li>{{album.name}}</li>
 
-</ul>
 {% endfor %}
+</ul>
+
+<a href="{% url 'another_app:musician_update' pk=musician.pk %}" class="btn btn-warning btn-sm">Update</a>
+
 
 
 
