delete view practise

--- a/another_project/my_another_project/another_app/templates/another_app/musician_details.html
+++ b/another_project/my_another_project/another_app/templates/another_app/musician_details.html
@@ -17,6 +17,8 @@
 
 <a href="{% url 'another_app:musician_update' pk=musician.pk %}" class="btn btn-warning btn-sm">Update</a>
 
+<a href="{% url 'another_app:musician_delete' pk=musician.pk %}" class="btn btn-danger btn-sm">Delete</a>
+
 
 
 
